// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fakeController > compiler will create fake class 1`] = `
"
        export class Controller1{
            
    add(arg0,arg1,arg2,arg3){
const ret={tag:\\"1-add\\",body:{},headers:{},query:{},params:{},method:\\"post\\",url:\\"/a\\"}
if(arg0!==undefined&&arg0!==null){ret.query['a']=arg0
}
if(arg1!==undefined&&arg1!==null){ret.body['b']=arg1
}
if(arg2!==undefined&&arg2!==null){ret.params['c']=arg2
ret.url=ret.url.replace('{{c}}',arg2)}
if(arg3!==undefined&&arg3!==null){ret.params['d']=arg3
ret.url=ret.url.replace('{{d}}',arg3)}

return ret
    }
    
            }
        export class Controller2{
            
    add(arg0,arg1){
const ret={tag:\\"2-add\\",body:{},headers:{},query:{},params:{},method:\\"post\\",url:\\"/a\\"}
if(arg0!==undefined&&arg0!==null){ret.query['a']=arg0
}
if(arg1!==undefined&&arg1!==null){ret.body['b']=arg1
}

return ret
    }
    
            }"
`;

exports[`fakeController > when key doesn' exist 1`] = `
"
        export class Controller1{
            
    add(arg0,arg1,arg2,arg3){
const ret={tag:\\"1-add\\",body:{},headers:{},query:{},params:{},method:\\"post\\",url:\\"/a\\"}
if(arg0!==undefined&&arg0!==null){ret.query['a']=arg0
}
if(arg1!==undefined&&arg1!==null){ret.body=arg1
}
if(arg2!==undefined&&arg2!==null){ret.params['c']=arg2
ret.url=ret.url.replace('{{c}}',arg2)}
if(arg3!==undefined&&arg3!==null){ret.params['d']=arg3
ret.url=ret.url.replace('{{d}}',arg3)}

return ret
    }
    
            }"
`;
